nextcloud-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nextcloud.app.a14n.net
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: nextcloud
              port:
                number: 8080
  tls:
    - hosts:
        - nextcloud.app.a14n.net
      secretName: nextcloud-app-a14n-net-cert
